Hoàng Nhi - Update code

--- a/FE/Views/Shared/Header/Default.cshtml
+++ b/FE/Views/Shared/Header/Default.cshtml
@@ -234,17 +234,33 @@
                                                 <button type="button" class="btn btn-link" data-mdb-ripple-init data-mdb-ripple-color="dark">Xem tất cà</button>
                                             </div>
                                             <div>
+                                                <div style="padding: 0px 8px;">
+                                                    <button type="button"
+                                                            class="btn btn-link d-flex align-items-center text-black"
+                                                            data-mdb-ripple-init
+                                                            data-mdb-ripple-color="dark"
+                                                            style="padding: 0px 8px; text-transform: none">
+                                                        <div style="margin: 6px 12px 6px 0px">
+                                                            <img class="rounded-circle position-relative" src="~/asset/Notification/RGB.jpg" />
+                                                            <i class="fa-brands fa-square-threads position-absolute rounded-circle" style="font-size: 28px"></i>
+                                                        </div>
+                                                        <div class="d-flex flex-column align-items-start" style="">
+                                                            <span class=""
+                                                                  style="font-size: 14px; font-weight: 400; text-align: left; color: rgb(101, 104, 108)">
+                                                                <strong>RGB</strong> ơi, một trang cá nhân mà bạn theo dõi vừa đăng trên Threads đấy.
+                                                            </span>
+                                                            <span style="font-size: 12px; color: rgb(101, 104, 108); font-weight: 400">5 ngày trước</span>
+                                                        </div>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <div style="margin: 16px; padding: 0px 12px; ">
                                                 <button type="button" 
-                                                        class="btn btn-link d-flex align-items-center"
-                                                        data-mdb-ripple-init 
-                                                        data-mdb-ripple-color="dark"
-                                                        style="padding: 0px 8px">
-                                                    <div style="margin: 6px 12px 6px 0px">
-                                                        <img src="~/asset/Notification/RGB.jpg" />
-                                                    </div>
-                                                    <span class="" 
-                                                          style="font-size: 14px; font-weight: 400; text-transform: none; text-align: left">
-                                                        <strong>RGB</strong> ơi, một trang cá nhân mà bạn theo dõi vừa đăng trên Threads đấy.
+                                                        class="btn btn-secondary w-100" 
+                                                        style="background-color: rgb(226, 229, 233); text-transform: none; color: rgb(8, 8, 9)" 
+                                                        data-mdb-ripple-init>
+                                                    <span style="font-size: 14px">
+                                                        Xem thông báo trước đó
                                                     </span>
                                                 </button>
                                             </div>
