Hoàng Nhi - Update code

--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
     <!-- Custom css -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <!-- Signalr -->
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
 
     <style>
         body {
@@ -65,5 +67,30 @@
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
     }
+    <script>
+        // Kết nối tới Hub SignalR từ API
+        const connection = new signalR.HubConnectionBuilder()
+            .withUrl("https://localhost:7181/messageHub") // URL API SignalR hub
+            .build();
+
+        // Hàm nhận tin nhắn từ server
+        connection.on("ReceiveMessage", function (user, message) {
+            console.log("ReceiveMessage: " + user + " - " + message);
+        });
+
+        // Kết nối tới Hub
+        connection.start().then(function () {
+            console.log("Connected to SignalR Hub");
+        }).catch(function (err) {
+            console.error(err.toString());
+        });
+
+        // Send message
+        function sendMessage() {
+            connection.invoke("SendMessage", "Hoàng Nhi", "Xin chào").catch(function (err) {
+                console.error(err.toString());
+            });
+        }
+    </script>
 </body>
 </html>
