--- a/FE/Views/Shared/Header/Default.cshtml
+++ b/FE/Views/Shared/Header/Default.cshtml
@@ -122,24 +122,61 @@
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-weight: bold; color: #473c38;">LinkU</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
-                </ul>
-            </div>
 
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center" style="padding: 0px 16px 0px 4px">
                 <div class="dropdown">
                     <div role="button"
+                         style="border-radius: 100px; margin-right: 8px"
+                         id="dropdownMessage"
+                         data-mdb-dropdown-init
+                         data-mdb-ripple-init
+                         aria-expanded="false"
+                         data-mdb-auto-close="outside">
+                        <div class="p-0" style="background-color: rgb(226, 229, 233); border-radius: 100px; height: 40px; width: 40px; position: relative">
+                            <i class="fa-brands fa-facebook-messenger" style="position: absolute; right: 8px; top: 8px; font-size: 24px"></i>
+                        </div>
+                    </div>
+                    <div id="dropdownMessageMenu"
+                         class="dropdown-menu"
+                         aria-labelledby="dropdownMessage"
+                         style="width: 360px">
+                            <div class="card">
+                                <div class="card-body p-0">
+                                    <div style="padding: 12px 16px 4px"
+                                         class="d-flex justify-content-between align-items-center">
+                                        <p style="padding: 6px 4px; font-size: 24px; font-weight: 700; color: black; margin: 0">Đoạn chat</p>
+                                        <div class="d-flex align-items-center">
+                                            <button type="button" 
+                                                    class="btn btn-link text-black rounded-circle" 
+                                                    data-mdb-ripple-init 
+                                                    data-mdb-ripple-color="dark"
+                                                    style="padding: 6px 7.5px">
+                                                <i class="fa-solid fa-ellipsis" style="font-size: 22px"></i>
+                                            </button>
+                                            <button type="button" 
+                                                    class="btn btn-link text-black rounded-circle" 
+                                                    data-mdb-ripple-init 
+                                                    data-mdb-ripple-color="dark"
+                                                    style="padding: 6px 7.5px">
+                                                <i class="fa-solid fa-maximize" style="font-size: 22px"></i>
+                                            </button>
+                                            <button type="button"
+                                                    class="btn btn-link text-black rounded-circle"
+                                                    data-mdb-ripple-init
+                                                    data-mdb-ripple-color="dark"
+                                                    style="padding: 6px 7.5px">
+                                                <i class="fa-regular fa-pen-to-square" style="font-size: 22px"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <div role="button"
+                         style="border-radius: 100px; margin-right: 8px"
                          id="dropdownNotification"
                          data-mdb-dropdown-init
                          data-mdb-ripple-init
@@ -157,7 +194,7 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center justify-content-between" style="margin: 20px 16px 12px 16px">
                                     <!--Header and Setting-->
-                                    <span class="fs-4 fw-bold" style="">Thông báo</span>
+                                    <span class="fs-4 fw-bold text-black" style="">Thông báo</span>
                                     <div class="dropdown">
                                         <button type="button"
                                                 id="dropdownSettingNotification"
@@ -166,7 +203,7 @@
                                                 data-mdb-ripple-color="dark">
                                             <i class="fa-solid fa-ellipsis" style="font-size: 24px; position: absolute; right: 9px; top: 8px;"></i>
                                         </button>
-                                        <div class="dropdownSettingNotification invisible">
+                                        <div class="dropdownSettingNotification invisible" style="z-index: 1">
                                             <div class="callouts callouts--top">
                                                 <div class="row setting py-2 mx-2" role="button" style="border-radius: 4px">
                                                     <div class="col-sm-1">
@@ -240,9 +277,12 @@
                                                             data-mdb-ripple-init
                                                             data-mdb-ripple-color="dark"
                                                             style="padding: 0px 8px; text-transform: none">
-                                                        <div style="margin: 6px 12px 6px 0px">
-                                                            <img class="rounded-circle position-relative" src="~/asset/Notification/RGB.jpg" />
-                                                            <i class="fa-brands fa-square-threads position-absolute rounded-circle" style="font-size: 28px"></i>
+                                                        <div style="margin: 6px 12px 6px 0px; position: relative">
+                                                            <img class="rounded-circle" src="~/asset/Notification/RGB.jpg" />
+                                                            <div class="rounded-circle position-absolute" 
+                                                                 style="height: 28px; width: 28px; background-color: black; align-content: center; bottom: -5px; right: -5px">
+                                                                <i class="fa-brands fa-threads" style="color: white; font-size: 18px; padding-top: 2px"></i>
+                                                            </div>
                                                         </div>
                                                         <div class="d-flex flex-column align-items-start" style="">
                                                             <span class=""
@@ -265,7 +305,9 @@
                                                 </button>
                                             </div>
                                         </div>
-                                        <div class="tab-pane fade" id="pills-unread" role="tabpanel" aria-labelledby="pills-unread-tab" tabindex="0">...</div>
+                                        <div class="tab-pane fade" id="pills-unread" role="tabpanel" aria-labelledby="pills-unread-tab" tabindex="0">
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
