Hoàng Nhi - Update code

--- a/FE/Views/Shared/Header/Default.cshtml
+++ b/FE/Views/Shared/Header/Default.cshtml
@@ -147,26 +147,47 @@
                                         <p style="padding: 6px 4px; font-size: 24px; font-weight: 700; color: black; margin: 0">Đoạn chat</p>
                                         <div class="d-flex align-items-center">
                                             <button type="button" 
-                                                    class="btn btn-link text-black rounded-circle" 
+                                                    class="btn btn-link text-black rounded-circle position-relative" 
                                                     data-mdb-ripple-init 
                                                     data-mdb-ripple-color="dark"
-                                                    style="padding: 6px 7.5px">
-                                                <i class="fa-solid fa-ellipsis" style="font-size: 22px"></i>
+                                                    style="padding: 20px 20px">
+                                                <i class="fa-solid fa-ellipsis position-absolute" 
+                                                   style="font-size: 20px; font-weight: 550; color: rgba(0,0,0,0.6); top: 50%; left: 50%; transform: translate(-50%, -50%);"></i>
                                             </button>
                                             <button type="button" 
-                                                    class="btn btn-link text-black rounded-circle" 
+                                                    class="btn btn-link text-black rounded-circle position-relative" 
                                                     data-mdb-ripple-init 
                                                     data-mdb-ripple-color="dark"
-                                                    style="padding: 6px 7.5px">
-                                                <i class="fa-solid fa-maximize" style="font-size: 22px"></i>
+                                                    style="padding: 20px 20px">
+                                                <i class="fa-solid fa-maximize position-absolute" 
+                                                   style="font-size: 20px; font-weight: 550; color: rgba(0,0,0,0.6); top: 50%; left: 50%; transform: translate(-50%, -50%); "></i>
                                             </button>
                                             <button type="button"
-                                                    class="btn btn-link text-black rounded-circle"
+                                                    class="btn btn-link text-black rounded-circle position-relative"
                                                     data-mdb-ripple-init
                                                     data-mdb-ripple-color="dark"
-                                                    style="padding: 6px 7.5px">
-                                                <i class="fa-regular fa-pen-to-square" style="font-size: 22px"></i>
+                                                    style="padding: 20px 20px">
+                                                <i class="fa-regular fa-pen-to-square position-absolute" 
+                                                   style="font-size: 20px; font-weight: 550; color: rgba(0,0,0,0.6); top: 50%; left: 50%; transform: translate(-50%, -50%); "></i>
                                             </button>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div style="margin: 8px 0; padding: 0 16px">
+                                            <div>
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text rounded-start-pill border-end-0" 
+                                                          id="MessageSearch"
+                                                          style="">
+                                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                                    </span>
+                                                    <input type="text"
+                                                           class="form-control border-start-0 rounded-end-pill"
+                                                           placeholder="Tìm kiếm trên Message"
+                                                           aria-label="Username"
+                                                           aria-describedby="MessageSearch" />
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
