--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -36,7 +36,8 @@
     }
 </style>
 
-<div class="d-flex">
+<div class="d-flex"
+     style="background-color: rgb(245, 245, 245) ">
     <!-- Chức năng -->
     <div id="Functions" style="width: 240px">
         <div>
@@ -68,20 +69,32 @@
 
         </div>
         <!-- Tên và sidenav -->
-        <div style="padding-top: 12px; margin: -6px 6px 0">
+        <div id="ProfilePicture"
+             style="padding-top: 12px; bottom: 12px; width: 240px"
+             class="d-flex align-items-center position-fixed">
             <button type="button"
                     class="btn btn-link btn-ProfilePicture"
                     data-mdb-ripple-init
                     data-mdb-ripple-color="dark"
-                    style="padding: 6px">
-                <img class="rounded-circle"
+                    style="padding: 6px; width: 80%; text-align: left">
+                <img id="Img-ProfilePicture"
+                     class="rounded-circle"
                      src="@User.ProfilePicture" 
                      width="32" height="32"
-                     style="margin: 6px"/>
-                <span style="text-transform: none; font-size: 14px; font-weight: 500; color: black">@User.Ten</span>
+                     style="margin: 0 6px"/>
+                <span id="Name-ProfilePicture"
+                      style="text-transform: none; font-size: 14px; font-weight: 500; color: black">@User.Ten</span>
             </button>
-            <div style="padding: 6px;">
-                
+            <div style="width: 20%">
+                <button type="button"
+                        class="btn btn-light rounded-circle"
+                        data-mdb-ripple-init
+                        data-mdb-ripple-color="dark"
+                        style="padding: 12px"
+                        onclick="ThuNhoSideNav()">
+                    <img src="~/asset/hide.png"
+                         width="20" height="20" />
+                </button>
             </div>
         </div>
     </div>
@@ -116,4 +129,36 @@
             button.classList.add('active');
         });
     });
+
+    function ThuNhoSideNav() {
+        const width = $("#Functions").width()
+        // Change Flex dir
+        const ProfilePicture = document.querySelector("#ProfilePicture");
+        const currentDirection = ProfilePicture.style.flexDirection;
+        ProfilePicture.style.flexDirection = (currentDirection === "row" || currentDirection === "") ? "column" : "row";
+
+        if (width == 44) {
+            $("#Functions").width(240)
+            $("#ProfilePicture").width(240)
+            // Show title
+            const elements = document.querySelectorAll(".text-Functions");
+            elements.forEach(element => {
+                element.style.display = "block";
+            });
+            const NameProfile = document.querySelector("#Name-ProfilePicture")
+            NameProfile.style.display = "inline";
+        } else {
+            $("#Functions").width(44)
+            $("#ProfilePicture").width(44)
+            // Hide title
+            const elements = document.querySelectorAll(".text-Functions");
+            elements.forEach(element => {
+                element.style.display = "none";
+            });
+            const NameProfile = document.querySelector("#Name-ProfilePicture")
+            NameProfile.style.display = "none";
+            // Remove margin
+            const ImgProfile = document
+        }
+    }
 </script>
