--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -34,13 +34,32 @@
         border-radius: 8px;
         pointer-events: none;
     }
+
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: rgba(255,0,0,0.8);
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
 </style>
 
 <div class="d-flex"
-     style="background-color: rgb(245, 245, 245) ">
+     style="background-color: rgb(245, 245, 245); height: calc(100vh - 32px)">
     <!-- Chức năng -->
     <div id="Functions" style="width: 240px">
-        <div>
+        <div style="height: calc(100vh - 88px); overflow-y: scroll">
             <button type="button"
                     class="btn btn-link d-flex align-items-center btn-Functions active"
                     data-mdb-ripple-init
@@ -70,7 +89,7 @@
         </div>
         <!-- Tên và sidenav -->
         <div id="ProfilePicture"
-             style="padding-top: 12px; bottom: 12px; width: 240px"
+             style="padding-top: 12px; bottom: 12px; width: 240px; background-color: rgb(245, 245, 245)"
              class="d-flex align-items-center position-fixed">
             <button type="button"
                     class="btn btn-link btn-ProfilePicture"
@@ -85,7 +104,8 @@
                 <span id="Name-ProfilePicture"
                       style="text-transform: none; font-size: 14px; font-weight: 500; color: black">@User.Ten</span>
             </button>
-            <div style="width: 20%">
+            <div id="SideNav"
+                 style="width: 20%">
                 <button type="button"
                         class="btn btn-light rounded-circle"
                         data-mdb-ripple-init
@@ -147,6 +167,14 @@
             });
             const NameProfile = document.querySelector("#Name-ProfilePicture")
             NameProfile.style.display = "inline";
+            // Add margin
+            const ImgProfile = document.querySelector("#Img-ProfilePicture")
+            ImgProfile.style.margin = "0 6px";
+            // Change Width
+            const BtnProfilePicture = document.querySelector(".btn-ProfilePicture")
+            BtnProfilePicture.style.width = "80%"
+            const SideNav = document.querySelector("#SideNav")
+            SideNav.style.width = "20%"
         } else {
             $("#Functions").width(44)
             $("#ProfilePicture").width(44)
@@ -158,7 +186,13 @@
             const NameProfile = document.querySelector("#Name-ProfilePicture")
             NameProfile.style.display = "none";
             // Remove margin
-            const ImgProfile = document
+            const ImgProfile = document.querySelector("#Img-ProfilePicture")
+            ImgProfile.style.margin = "0";
+            // Change Width
+            const BtnProfilePicture = document.querySelector(".btn-ProfilePicture")
+            BtnProfilePicture.style.width = "100%"
+            const SideNav = document.querySelector("#SideNav")
+            SideNav.style.width = "100%"
         }
     }
 </script>
