--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <div style="margin: 16px 0; padding: 0px 16px">
+    <div style="margin: 16px 0; padding: 0px 16px;">
         @RenderBody()
     </div>
 
