--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -40,56 +40,51 @@
     }
 
     /* Track */
-    ::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-        -webkit-border-radius: 10px;
-        border-radius: 10px;
+    #Functions-container::-webkit-scrollbar-track:hover {
+        -webkit-box-shadow: none;
     }
 
     /* Handle */
-    ::-webkit-scrollbar-thumb {
-        -webkit-border-radius: 10px;
-        border-radius: 10px;
-        background: rgba(255,0,0,0.8);
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    #Functions-container::-webkit-scrollbar-thumb {
+        -webkit-box-shadow: none
     }
 </style>
 
 <div class="d-flex"
      style="background-color: rgb(245, 245, 245); height: calc(100vh - 32px)">
     <!-- Chức năng -->
-    <div id="Functions" style="width: 240px">
-        <div style="height: calc(100vh - 88px); overflow-y: scroll">
-            <button type="button"
-                    class="btn btn-link d-flex align-items-center btn-Functions active"
-                    data-mdb-ripple-init
-                    data-mdb-ripple-color="dark">
-                <i class="fa-solid fa-comment icon-Functions"
-                   style=""></i>
-                <span class="text-Functions">Đoạn chat</span>
-            </button>
+    <div id="Functions" style="width: 20%; max-width: 240px">
+        <div style="height: calc(100vh - 110px); overflow: hidden; position: relative;">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: -10px; overflow-y: scroll;">
+                <button type="button"
+                        class="btn btn-link d-flex align-items-center btn-Functions active"
+                        data-mdb-ripple-init
+                        data-mdb-ripple-color="dark">
+                    <i class="fa-solid fa-comment icon-Functions"
+                       style=""></i>
+                    <span class="text-Functions">Đoạn chat</span>
+                </button>
 
-            <button type="button"
-                    class="btn btn-link d-flex align-items-center btn-Functions"
-                    data-mdb-ripple-init
-                    data-mdb-ripple-color="dark">
-                <i class="fa-solid fa-comment-dots icon-Functions"></i>
-                <span class="text-Functions">Tin nhắn đang chờ</span>
-            </button>
+                <button type="button"
+                        class="btn btn-link d-flex align-items-center btn-Functions"
+                        data-mdb-ripple-init
+                        data-mdb-ripple-color="dark">
+                    <i class="fa-solid fa-comment-dots icon-Functions"></i>
+                    <span class="text-Functions">Tin nhắn đang chờ</span>
+                </button>
 
-            <button type="button"
-                    class="btn btn-link d-flex align-items-center btn-Functions"
-                    data-mdb-ripple-init
-                    data-mdb-ripple-color="dark">
-                <i class="fa-solid fa-box-archive icon-Functions"></i>
-                <span class="text-Functions">Tin nhắn lưu trữ</span>
-            </button>
-
-
+                <button type="button"
+                        class="btn btn-link d-flex align-items-center btn-Functions"
+                        data-mdb-ripple-init
+                        data-mdb-ripple-color="dark">
+                    <i class="fa-solid fa-box-archive icon-Functions"></i>
+                    <span class="text-Functions">Tin nhắn lưu trữ</span>
+                </button>
+            </div>
         </div>
         <!-- Tên và sidenav -->
         <div id="ProfilePicture"
-             style="padding-top: 12px; bottom: 12px; width: 240px; background-color: rgb(245, 245, 245)"
+             style="padding-top: 12px; bottom: 12px; width: 20%; max-width: 240px; background-color: rgb(245, 245, 245)"
              class="d-flex align-items-center position-fixed">
             <button type="button"
                     class="btn btn-link btn-ProfilePicture"
@@ -120,12 +115,12 @@
     </div>
 
     <!-- Danh sách tin nhắn -->
-    <div id="MessageList" style="width: 395px">
+    <div id="MessageList" style="width: 30%">
         MessageList
     </div>
 
     <!-- Tin nhắn -->
-    <div id="Messages" style="width: 805px">
+    <div id="Messages" style="width: 50%">
         Messages
     </div>
 </div>
@@ -160,6 +155,10 @@
         if (width == 44) {
             $("#Functions").width(240)
             $("#ProfilePicture").width(240)
+            const Functions = document.querySelector("#Functions")
+            Functions.style.width = "20%"
+            const ProfilePicture = document.querySelector("#ProfilePicture")
+            ProfilePicture.style.width = "20%"
             // Show title
             const elements = document.querySelectorAll(".text-Functions");
             elements.forEach(element => {
