Hoàng Nhi - Update code

--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
                     class="btn btn-link btn-ProfilePicture"
                     data-mdb-ripple-init
                     data-mdb-ripple-color="dark"
-                    style="padding: 6px; width: 80%; text-align: left">
+                    style="padding: 6px; width: 80%; text-align: left; display: flex; align-items: center">
                 <img id="Img-ProfilePicture"
                      class="rounded-circle"
                      src="@User.ProfilePicture" 
