--- a/FE/Views/Account/Login.cshtml
+++ b/FE/Views/Account/Login.cshtml
@@ -60,7 +60,9 @@
                     @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger", @style = "align-self: start;" })
                     <button type="submit" class="btn btn-primary w-100 my-3" style="background-color: #473c38; color: white;" data-mdb-ripple-init>Đăng nhập</button>
                     <div class="d-flex w-100 justify-content-between">
-                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#" style="color: black">
+                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" 
+                           href="@Url.Action("Register", "Account")" 
+                           style="color: black">
                             Tạo tài khoản mới
                         </a>
                         <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#" style="color: black">
