--- a/FE/Views/Shared/_LayoutAccount.cshtml
+++ b/FE/Views/Shared/_LayoutAccount.cshtml
@@ -17,6 +17,10 @@
     <!-- Jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Jquery validate -->
+    <link rel="stylesheet" href="/lib/jquery-ui-1.14.1/jquery-ui.min.css">
+    <script src="/lib/jquery-ui-1.14.1/jquery-ui.js"></script>
+    <script src="/lib/jquery-ui-1.14.1/jquery-ui.min.js"></script>
+    <!-- Jquery UI -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
     <!-- Custom css -->
