--- a/FE/wwwroot/css/DatePicker.css
+++ b/FE/wwwroot/css/DatePicker.css
@@ -5,13 +5,11 @@
 }
 .wrapper {
     max-width: 18rem;
-    padding: 0 0.5rem;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 4rem;
 }
 
-.wrapper label {
+/*.wrapper label {
     font-size: 0.75rem;
     font-weight: 400;
     display: block;
@@ -20,7 +18,7 @@
     border: 1px solid #ECEFF1;
     padding: 0.5rem 0.75rem;
     border-radius: 0.5rem;
-}
+}*/
 
 .wrapper input {
     font-family: 'Roboto', sans-serif;
@@ -31,7 +29,7 @@
     line-height: 1.5rem;
     padding: 0;
     font-size: 1rem;
-    color: #607D8B;
+    color: rgb(79, 79, 79);
     width: 100%;
     margin-top: 0.5rem;
 }
