--- a/FE/Views/Account/Register.cshtml
+++ b/FE/Views/Account/Register.cshtml
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col-md-6">
                     <div class="wrapper">
                         <div class="form-outline" data-mdb-input-init>
@@ -49,7 +49,16 @@
                             <label class="form-label" for="DateOfBirth">Ngày sinh</label>
                         </div>
                     </div>
-                    
+                </div>
+                <div class="col-md-6">
+                    <select class="form-select"
+                            style="margin-top: 8px; padding: .32rem .75rem; font-size: 1rem; 
+                            font-weight: 400; line-height: 1.6; color: #4f4f4f"
+                            asp-for="Gender">
+                        <option selected>- Giới tính -</option>
+                        <option value="1">Nam</option>
+                        <option value="0">Nữ</option>
+                    </select>
                 </div>
             </div>
         </div>
