--- a/FE/Views/Account/Register.cshtml
+++ b/FE/Views/Account/Register.cshtml
@@ -10,6 +10,12 @@
     document.head.appendChild(link);
 </script>
 
+<style>
+    .form-select:focus {
+        border-color: #3b71ca !important
+    }
+</style>
+
 <div style="width: 432px; justify-self: center">
     <p style="font-size: 52px; font-weight: bold; color: #473c38; justify-self: center">LinkU</p>
     <div class="card">
@@ -35,9 +41,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mt-2">
                 <div class="col-md-6">
-                    <div class="wrapper">
+                    <div class="wrapper" style="min-width: 100%">
                         <div class="form-outline" data-mdb-input-init>
                             <input type="text" 
                                    asp-for="DateOfBirth"
@@ -53,7 +59,7 @@
                 <div class="col-md-6">
                     <select class="form-select"
                             style="margin-top: 8px; padding: .32rem .75rem; font-size: 1rem; 
-                            font-weight: 400; line-height: 1.6; color: #4f4f4f"
+                            font-weight: 400; line-height: 24px; color: #4f4f4f; border: 1px solid rgb(189, 189, 189)"
                             asp-for="Gender">
                         <option selected>- Giới tính -</option>
                         <option value="1">Nam</option>
