--- a/FE/Views/Shared/_LayoutAccount.cshtml
+++ b/FE/Views/Shared/_LayoutAccount.cshtml
@@ -23,6 +23,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
     <!-- Custom css -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <!-- Datepicker -->
+    <script type="text/javascript" src="/js/datepicker-vi.js"></script>
 
     <style>
         body {
