--- a/FE/Views/Account/Register.cshtml
+++ b/FE/Views/Account/Register.cshtml
@@ -49,7 +49,7 @@
     }
 </style>
 
-<div style="width: 432px; justify-self: center">
+<div style="width: 432px; justify-self: center; height: 100vh; align-content: center">
     <p style="font-size: 52px; font-weight: bold; color: #473c38; justify-self: center">LinkU</p>
     <div class="card">
         <div class="card-header d-flex flex-column align-items-center" 
@@ -59,80 +59,92 @@
         </div>
         <div class="card-body"
              style="padding: 16px">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-outline" data-mdb-input-init>
-                        <input type="text" asp-for="HoLot" class="form-control" />
-                        <label class="form-label" for="HoLot">Họ lót</label>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-outline" data-mdb-input-init>
-                        <input type="text" asp-for="Ten" class="form-control" />
-                        <label class="form-label" for="Ten">Tên</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-6">
-                    <div class="wrapper" style="min-width: 100%">
+            @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frmRegister" }))
+            {
+                <div class="row">
+                    <div class="col-md-6">
                         <div class="form-outline" data-mdb-input-init>
-                            <input type="text"
-                                   asp-for="DateOfBirth"
-                                   autocomplete="off"
-                                   class="form-control bg-white"
-                                   readonly
-                                   value="">
-                            <label class="form-label" for="DateOfBirth">Ngày sinh</label>
+                            <input type="text" asp-for="HoLot" class="form-control" />
+                            <label class="form-label" for="HoLot">Họ lót</label>
                         </div>
+                        @Html.ValidationMessageFor(model => model.HoLot, "", new { @class = "text-danger", @style = "align-self: start;" })
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-outline" data-mdb-input-init>
+                            <input type="text" asp-for="Ten" class="form-control" />
+                            <label class="form-label" for="Ten">Tên</label>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.Ten, "", new { @class = "text-danger", @style = "align-self: start;" })
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <select class="form-select"
-                            style="padding: .32rem .75rem; font-size: 1rem;
-                            font-weight: 400; line-height: 24px; color: #4f4f4f; border: 1px solid rgb(189, 189, 189)"
-                            asp-for="Gender">
-                        <option selected>- Giới tính -</option>
-                        <option value="1">Nam</option>
-                        <option value="0">Nữ</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-12">
-                    <div class="form-outline" data-mdb-input-init>
-                        <input type="text" asp-for="Username" class="form-control" />
-                        <label class="form-label" for="Username">Email hoặc số điện thoại</label>
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="wrapper" style="min-width: 100%">
+                            <div class="form-outline" data-mdb-input-init>
+                                <input type="text"
+                                       asp-for="DateOfBirth"
+                                       autocomplete="off"
+                                       class="form-control bg-white"
+                                       readonly
+                                       value="">
+                                <label class="form-label" for="DateOfBirth">Ngày sinh</label>
+                            </div>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger", @style = "align-self: start;" })
+                    </div>
+                    <div class="col-md-6">
+                        <select class="form-select"
+                                style="padding: .32rem .75rem; font-size: 1rem;
+                                font-weight: 400; line-height: 24px; color: #4f4f4f; border: 1px solid rgb(189, 189, 189)"
+                                asp-for="Gender">
+                            <option value="">- Giới tính -</option>
+                            <option value="1">Nam</option>
+                            <option value="0">Nữ</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger", @style = "align-self: start;" })
                     </div>
                 </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-12">
-                    <div class="form-outline" data-mdb-input-init>
-                        <input type="text" asp-for="Password" class="form-control" />
-                        <label class="form-label" for="Password">Mật khẩu</label>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <div class="form-outline" data-mdb-input-init>
+                            <input type="text" asp-for="Username" class="form-control" />
+                            <label class="form-label" for="Username">Email hoặc số điện thoại</label>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger", @style = "align-self: start;" })
                     </div>
                 </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-12">
-                    <div class="form-outline" data-mdb-input-init>
-                        <input type="text" asp-for="ConfirmPassword" class="form-control" />
-                        <label class="form-label" for="ConfirmPassword">Xác nhận mật khẩu</label>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <div class="form-outline" data-mdb-input-init>
+                            <input type="text" asp-for="Password" class="form-control" />
+                            <label class="form-label" for="Password">Mật khẩu</label>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger", @style = "align-self: start;" })
                     </div>
                 </div>
-            </div>
-            <div style="display: flex; flex-direction: column; align-items: center">
-                <button type="submit" 
-                        class="btn btn-primary w-100 my-3" 
-                        style="background-color: #473c38; color: white;" 
-                        data-mdb-ripple-init>Đăng ký</button>
-                <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
-                   href="@Url.Action("Register", "Account")"
-                   style="color: black">
-                    Tạo tài khoản mới
-                </a>
-            </div>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <div class="form-outline" data-mdb-input-init>
+                            <input type="text" asp-for="ConfirmPassword" class="form-control" />
+                            <label class="form-label" for="ConfirmPassword">Xác nhận mật khẩu</label>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger", @style = "align-self: start;" })
+                    </div>
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: center">
+                    <button type="submit"
+                            class="btn btn-primary w-100 my-3"
+                            style="background-color: #473c38; color: white;"
+                            data-mdb-ripple-init>
+                        Đăng ký
+                    </button>
+                    <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                       href="@Url.Action("Login", "Account")"
+                       style="color: black">
+                        Đã có tài khoản ?
+                    </a>
+                </div>
+            }
         </div>
 
     </div>
